# rust-bdf

./: .gitignore  Cargo.toml  README.j2  README.md  justfile
.github/: bors.toml
.github/workflows/: rust.yml
examples/: draw.rs
src/: bitmap.rs  bounding_box.rs  direction.rs  entry.rs  error.rs  font.rs  glyph.rs  lib.rs  property.rs
src/reader/: mod.rs  reader.rs
src/writer/: mod.rs  writer.rs
tests/: gohufont.bdf  lib.rs
